[package]
name = "eclipse_threader"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = { version = "0.5.8", optional = true }
pin-project-lite = { version = "0.2.16", default-features = false }
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }
crossbeam-deque = { version = "0.8.4", default-features = false }
crossbeam-utils = { version = "0.8.21", default-features = false }
heapless = "0.9.1"
spin = { version = "0.10.0", default-features = false, features = ["mutex", "rwlock", "spin_mutex"] }
slab = { version = "0.4.11", default-features = false }
x86_64 = "0.15.2"
eclipse_framebuffer = { workspace = true }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
